--- a/main.css
+++ b/main.css
@@ -46,6 +46,7 @@ nav button {
     width: 250px;
     height: 350px;
     border: solid black 3px ;
+    border-radius: 10px;
     margin-top: 5em;
     display: flex;
     flex-direction: column;
@@ -79,4 +80,36 @@ nav button {
 
 #display-card #cardBtm {
     margin-left: 75%
+}
+
+/* Remaining Cards */
+.cardsRemaining {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-around; */
+}
+
+.cardsRemaining div {
+    margin: 0 8em;
+}
+
+.cardsRemaining ul {
+    list-style: none;
+}
+
+.cardsRemaining ul li {
+    font-size: 25pt;
+}
+
+.cardsRemaining {
+    margin: 1em;
+}
+
+.used-cards div {
+    display: flex;
+    flex-direction: column;
+}
+
+.used-cards, div img  {
+    height: 25px;
 }
