--- a/main.css
+++ b/main.css
@@ -4,8 +4,10 @@ html body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    overflow-x: hidden;
 }
+
+/*! NAV  */
 
 nav {
     display: flex;
@@ -40,17 +42,33 @@ nav button {
     color: black;
 }
 
+/*! Display Card */
+#dashboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100vw;
+    height: 90vh;
+}
 
-/* Deck Display */
+/*? Remaining Cards  */
+#deckGroup li {
+    list-style: none;
+    font-size: 25pt;
+}
+
+/*? Single Card */
 #display-card {
     width: 250px;
     height: 350px;
     border: solid black 3px ;
     border-radius: 10px;
-    margin-top: 5em;
     display: flex;
     flex-direction: column;
     padding: .5em;
+    background-image: url('./assets/cardBack.jpg');
+    background-size: 100%;
+    background-position: center;
 }
 
 #display-card div>* {
@@ -82,34 +100,34 @@ nav button {
     margin-left: 75%
 }
 
-/* Remaining Cards */
-.cardsRemaining {
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-around; */
-}
+/*? Discarded Cards */
 
-.cardsRemaining div {
-    margin: 0 8em;
-}
-
-.cardsRemaining ul {
-    list-style: none;
-}
-
-.cardsRemaining ul li {
-    font-size: 25pt;
-}
-
-.cardsRemaining {
-    margin: 1em;
-}
-
-.used-cards div {
+#discarded-cards {
+    width: 35%;
     display: flex;
     flex-direction: column;
 }
 
+#used-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+#used-cards div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 50px;
+    margin: .5em;
+}
+
 .used-cards, div img  {
     height: 25px;
+}
+
+.used-cards, div p {
+    font-size: 25px;
+    margin: 0;
 }
