--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ nav button {
     width: 100px;
     color: white;
     border-radius: 10px;
+    box-shadow: 10px 8px 8px slategrey;
 }
 
 .redDeck {
@@ -29,7 +30,7 @@ nav button {
 }
 
 .redDeck:hover {
-    background-color: whitesmoke;
+    background-color: white;
     color: red;
 }
 
@@ -38,7 +39,7 @@ nav button {
 }
 
 .blackDeck:hover {
-    background-color: whitesmoke;
+    background-color: white;
     color: black;
 }
 
@@ -119,9 +120,13 @@ nav button {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: 50px;
-    margin: .5em;
+    width: 75px;
+    height: 40px;
+    margin: 1em;
+    box-shadow: 2px 2px 2px slategray;
+    border-radius: 8px;
 }
+
 
 .used-cards, div img  {
     height: 25px;
